updated Italian translation

--- a/po/wesnoth-aoi/it.po
+++ b/po/wesnoth-aoi/it.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-01-16 10:39+0100\n"
-"Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
+"PO-Revision-Date: 2011-11-19 16:18+0100\n"
+"Last-Translator: \n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -64,7 +64,7 @@ msgid ""
 "Continent, learning valuable tactics as you do so.\n"
 "\n"
 msgstr ""
-"Difendi le foreste degli elfi contro i primi orchi giunti  al Grande "
+"Difendi le foreste degli elfi contro i primi orchi giunti al Grande "
 "Continente, imparando valide tattiche durante la battaglia.\n"
 "\n"
 
@@ -86,7 +86,7 @@ msgstr "Miglioramenti alla storia e al gioco (dalla versione 1.4 in poi)"
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Disegnatori e contributi artistici"
 
 #. [about]
 #: data/campaigns/An_Orcish_Incursion/_main.cfg:60
@@ -165,9 +165,9 @@ msgid ""
 "which elves could recognize as akin to their own nature. Orcs seemed "
 "completely alien."
 msgstr ""
-"Gli umani, benché rozzi ed impudenti, possedevano quella scintilla creativa "
-"che gli elfi potevano riconoscere come affine alla loro natura. Gli orchi "
-"erano completamente estranei."
+"Gli umani, benché rozzi ed impudenti, almeno possedevano quella scintilla "
+"creativa che gli elfi potevano riconoscere come affine alla loro natura. Gli "
+"orchi sembravano completamente estranei."
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:77
@@ -191,8 +191,8 @@ msgid ""
 "The orcs were first sighted from the north marches of the great forest of "
 "Wesmere."
 msgstr ""
-"Gli orchi furono avvistati per la prima volta a molti giorni di marcia a "
-"nord della grande foresta di Wesmere."
+"Gli orchi furono avvistati per la prima volta nelle marche settentrionali "
+"della grande foresta di Wesmere."
 
 #. [objectives]
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:99
@@ -232,7 +232,7 @@ msgid ""
 "My lord! A party of aliens has made camp to the north and lays waste to the "
 "forest. Our scouts believe it’s a band of orcs."
 msgstr ""
-"Mio signore! Un gruppo di stranieri si è accampato a nord e profana la "
+"Mio signore! Un gruppo di estranei si è accampato a nord e profana la "
 "foresta. I nostri esploratori credono che sia una banda di orchi."
 
 #. [message]: id=Erlornas
@@ -283,14 +283,14 @@ msgid ""
 "Look at them. Big, slow, clumsy and hardly a bow in hand. Keep to the trees, "
 "use your arrows and the day will be ours."
 msgstr ""
-"Guardateli bene. Grossi, lenti, goffi e con appena un arco in mano. Teneteli "
-"in mezzo agli alberi, usate le frecce e il giorno sarà nostro."
+"Guardateli bene. Grossi, lenti, goffi e a stento usano un arco. Teneteli in "
+"mezzo agli alberi, usate le frecce e il giorno sarà nostro."
 
 #. [message]: race=elf
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:171
 msgid "It’s hopeless; we’ve tried everything, and they’re still coming back."
 msgstr ""
-"Non c’è speranza, le abbiamo provate tutte, e quelli continuano a tornare."
+"Non c’è speranza; le abbiamo provate tutte, e quelli continuano a tornare."
 
 #. [message]: id=Urugha
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:175
@@ -330,7 +330,7 @@ msgid ""
 msgstr ""
 "Poco è noto degli eventi successivi, poiché la maggior parte delle "
 "informazioni andò persa nel caos e nella confusione, ma una cosa è "
-"dolorosamente certa: gli elfi persero la campagna."
+"dolorosamente certa. Gli elfi persero la campagna."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:201
@@ -359,8 +359,8 @@ msgid ""
 "the war. Given its final outcome, this was perhaps for the best."
 msgstr ""
 "Lord Erlornas morì durante il primo giorno di battaglia e non vide mai la "
-"fine della guerra. Visto il risultato finale, questa probabilmente è stata "
-"la sorte migliore."
+"fine della guerra. Visto il risultato finale, questa probabilmente fu la "
+"sorte migliore."
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/01_Defend_the_Forest.cfg:232
@@ -371,7 +371,7 @@ msgid ""
 msgstr ""
 "Sono stato sconfitto, ma non vi siete battuti lealmente... siate mille volte "
 "maledetti, luridi codardi! Che voi possiate soffrire... e quando il mio "
-"signore Rualsha vi avrà trovato, che possa spazzare via la vostra gente "
+"signore, Rualsha, vi avrà trovato, che possa spazzare via la vostra gente "
 "dalla faccia di questa terra!"
 
 #. [message]: id=Erlornas
@@ -379,7 +379,7 @@ msgstr ""
 msgid ""
 "Rualsha? Hmm... What if... Assemble a war-party, we need to scout north!"
 msgstr ""
-"Rualsha? Uhm... e se...   Radunate una squadra da combattimento, dobbiamo "
+"Rualsha? Uhm... E se...   Radunate una squadra da combattimento, dobbiamo "
 "esplorare le terre a nord!"
 
 #. [scenario]: id=02_Assassins
@@ -422,8 +422,8 @@ msgid ""
 msgstr ""
 "Suggerimento:\n"
 "Gli assassini sono difficili da colpire e il loro veleno è insidioso. Stai "
-"vicino ai villaggi, dove le unità avvelenate possono essere guarite, e cerca "
-"di costringere il nemico ad attaccarti dal fiume."
+"vicino ai villaggi, dove può essere curato l’avvelenamento, e cerca di "
+"costringere il nemico ad attaccarti dal fiume."
 
 #. [objective]: condition=win
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:93
@@ -464,7 +464,7 @@ msgstr "A battaglia finita, voglio delle risposte. Ma per il momento—"
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:142
 msgid "Gharlsa sees elves... yes... Fresh meat for wolves. Yes, yes..."
-msgstr "Gharlsa vedere elfi... sì... carne fresca per nostri lupi, sì, sì..."
+msgstr "Gharlsa vede elfi... sì... Carne fresca per lupi. Sì, sì..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:146
@@ -484,7 +484,7 @@ msgstr "L’apparenza inganna. Dite agli uomini di stare attenti."
 #. [message]: id=Gharlsa
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:165
 msgid "Yes... yes... Slay them!"
-msgstr "Sì... sì... trucidateli!"
+msgstr "Sì... sì... Trucidateli!"
 
 #. [message]: speaker=unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/02_Assassins.cfg:176
@@ -530,10 +530,9 @@ msgid ""
 msgstr ""
 "Man mano che procedevano verso a nord, la verde foresta si diradava, "
 "sfumando in un paesaggio arido e incolto. I segni erano inequivocabili – "
-"ceppi d’albero, altri alberi mezzi marci qua e là, abbattuti da lungo tempo "
-"e legno morto tutto intorno a loro, nella rada erba. Questa una volta era "
-"una foresta, simile al bosco che gli elfi chiamavano casa. Era stata "
-"assassinata."
+"ceppi d’albero, l’occasionale albero mezzo marcio da lungo tempo caduto, e "
+"legno morto tutto intorno a loro nella rada erba. Questa una volta era una "
+"foresta, simile al bosco che gli elfi chiamavano casa. Era stata assassinata."
 
 #. [part]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:64
@@ -557,9 +556,9 @@ msgid ""
 msgstr ""
 "Erlonas era quasi certo di trovare degli orchi lì. Nessun clan dei nani "
 "avrebbe potuto rompere l’antico trattato con gli elfi in questo modo; gli "
-"uomini non sono mai stati così... metodici nella distruzione, e non "
+"uomini non erano mai stati così... metodici nella distruzione, e non "
 "viaggiavano in gruppi abbastanza grandi nelle terre del nord, perché per "
-"loro sono troppo fredde e umide. Il grande interrogativo rimaneva – sarebbe "
+"loro erano troppo fredde e umide. Il grande interrogativo rimaneva — sarebbe "
 "riuscito a trovare Rualsha?"
 
 #. [part]
@@ -569,8 +568,8 @@ msgid ""
 "fear on other orcs. Come next morning, the elves were prepared for battle."
 msgstr ""
 "Forse più avanti, di certo non qui. La tribù accampata in questi luoghi era "
-"troppo piccola per dominare su un qualsiasi altro gruppo di orchi. "
-"L’indomani, gli elfi erano pronti a dare battaglia."
+"troppo piccola per incutere paura agli altri orchi. L’indomani mattina, gli "
+"elfi erano pronti a dare battaglia."
 
 #. [objectives]
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:86
@@ -650,8 +649,8 @@ msgid ""
 "We found the way... Now... we will come in numbers... (<i>cough</i>) you "
 "can’t imagine..."
 msgstr ""
-"Ormai abbiamo trovato la strada... ora... verremo in un numero... (<i>coff</"
-"i>) che neanche osi immaginare..."
+"Ormai abbiamo trovato la strada... Ora... verremo in massa... (<i>coff</i>) "
+"che neanche osi immaginare..."
 
 #. [message]: id=Gnargha
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:206
@@ -767,9 +766,9 @@ msgid ""
 "tribe. But the threat from the north remained unresolved and loomed large "
 "over their future."
 msgstr ""
-"Quando finalmente i rinforzi arrivarono, gli elfi si adoperarono per "
-"scacciare la tribù degli orchi. Ma la minaccia dal nord rimase intatta e "
-"incombeva minacciosa sul loro futuro."
+"Quando finalmente i rinforzi arrivarono, gli elfi riuscirono a scacciare la "
+"tribù degli orchi. Ma la minaccia dal nord rimase intatta e incombeva "
+"minacciosa sul loro futuro."
 
 #. [message]: role=Adviser
 #: data/campaigns/An_Orcish_Incursion/scenarios/03_Wasteland.cfg:323
@@ -895,8 +894,8 @@ msgid ""
 msgstr ""
 "Ormai lo conosci bene... Rualsha. Quel nome risuona ovunque da quando questa "
 "incursione è iniziata. Quell’orco è qualcosa di più che un bandito "
-"saccheggiatore in cerca di villaggi da depredare; vuole questa terra. La "
-"<i>nostra</i> terra. Sta pianificando un’invasione; ne sono certo. Dobbiamo "
+"saccheggiatore in cerca di villaggi da depredare. Vuole questa terra. La "
+"<i>nostra</i> terra. Sta pianificando un’invasione, ne sono certo. Dobbiamo "
 "ottenere informazioni più dettagliate sui suoi piani prima di tornare "
 "indietro."
 
@@ -910,7 +909,7 @@ msgstr "E dimmi... Come hai dormito la notte scorsa?"
 msgid ""
 "How did I?... Uneasy, lord. My dreams were bleak, some of them nightmares."
 msgstr ""
-"Come è stato il mio sonno?... irrequieto, mio signore. I miei sogni sono "
+"Come è stato il mio sonno?... Irrequieto, mio signore. I miei sogni sono "
 "stati tetri, alcuni di essi incubi."
 
 #. [message]: id=Erlornas
@@ -922,8 +921,8 @@ msgid ""
 "flavor."
 msgstr ""
 "Lo so. Le correnti terrestri qui sono perturbate, e i ponti per la terra dei "
-"sogni sono corrotti. Credo ci sia la dimora di un mago qui da qualche parte. "
-"O forse più di uno; le tracce sono confuse, e alcune di esse hanno un odore "
+"sogni sono corrotti. Credo ci sia un mago che risiede nei paraggi. O forse "
+"più di uno; le tracce sono confuse, e alcune di esse hanno un odore "
 "insalubre."
 
 #. [message]: role=Advisor
@@ -933,7 +932,7 @@ msgid ""
 "battle-might."
 msgstr ""
 "Sarebbe davvero terribile per noi se questi orchi riuscissero ad aggiungere "
-"la magia alla loro leggendaria potenza in battaglia."
+"la magia alla loro potenza in battaglia."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:220
@@ -994,7 +993,7 @@ msgstr "Abbiamo ucciso un comandante! Coraggio! La battaglia è quasi vinta!"
 #. [message]: speaker=second_unit
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:297
 msgid "Ha! Me smashed da funny elf. Me got a trophy!"
-msgstr "Ha! Me schiaccia buffi elfi. Io vince trofeo!"
+msgstr "Ha! Me schiaccia buffo elfo. Io vince trofeo!"
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/04_Valley_of_Trolls.cfg:301
@@ -1092,7 +1091,7 @@ msgid ""
 "unknown country, not frequented even by Wesmere’s furthermost-faring scouts."
 msgstr ""
 "Dopo una giornata di riposo faticosamente guadagnata, gli elfi ripresero la "
-"marcia verso nord. Questa era un territorio sconosciuto, mai raggiunto "
+"marcia verso nord. Questo era un territorio sconosciuto, mai raggiunto "
 "neanche dagli esploratori di Wesmere che si spinsero più lontano."
 
 #. [part]
@@ -1216,13 +1215,13 @@ msgid ""
 "Interesting... Go to my personal stores and bring me a bottle of wine. And a "
 "couple of glasses."
 msgstr ""
-"Interessante... Portatemi una bottiglia dalla mia riserva personale. E una "
-"coppia di calici."
+"Interessante... Portatemi una bottiglia di vino dalla mia riserva personale. "
+"E una coppia di calici."
 
 #. [message]: role=Advisor
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:182
 msgid "... Glasses?"
-msgstr "...calici?"
+msgstr "... Calici?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:186
@@ -1267,7 +1266,7 @@ msgid ""
 "of Wesmere. I find your presence here... surprising."
 msgstr ""
 "Quindi hai deciso di accettare l’invito. Bene. Benvenuta, io sono Erlornas "
-"di Wesmere. Trovo la tua presenza qui...sorprendente."
+"di Wesmere. Trovo la tua presenza qui... sorprendente."
 
 #. [message]: speaker=Linaera
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:244
@@ -1276,7 +1275,7 @@ msgid ""
 "against these orcs. They have been besieging my tower for weeks."
 msgstr ""
 "Appena meno di quanto non trovi la tua, mio signore degli elfi, ma benedico "
-"l’aiuto che ci porti contro questi orchi che assediano la mia torre per "
+"l’aiuto che ci porti contro questi orchi. Essi assediano la mia torre da "
 "settimane."
 
 #. [message]: id=Erlornas
@@ -1319,7 +1318,7 @@ msgstr ""
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:288
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:128
 msgid "Alas, Erlornas, I have failed us..."
-msgstr "Ahimè, Erlornas, io tradito le nostre aspettative..."
+msgstr "Ahimè, Erlornas, ho tradito le nostre aspettative..."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:306
@@ -1340,10 +1339,9 @@ msgid ""
 "will want it abolished as much as do I."
 msgstr ""
 "Sì, lo percepisco anche io. Qualcosa di malvagio si è recentemente annidato "
-"nella valle confinante la nostra. Ai confini del mio dominio sono stati "
-"fiutati i suoi servitori. Avevo già pensato di occuparmene personalmente, ma "
-"se voi elfi onorate la verde terra, immagino vorrete sopprimerlo quanto lo "
-"voglia io."
+"nella valle confinante la nostra; i suoi servitori fiutavano ai confini del "
+"mio dominio. Avevo già pensato di occuparmene personalmente, ma se voi elfi "
+"onorate la verde terra, immagino vorrete sopprimerlo quanto lo voglia io."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/05_Linaera_the_Quick.cfg:314
@@ -1385,7 +1383,7 @@ msgid ""
 msgstr ""
 "Gli spiriti malvagi che si sono insediati in questo acquitrino lo hanno "
 "trasformato in un’orribile palude. Io ed i miei apprendisti abbiamo il "
-"potere di ripulire l’area, ma dovete proteggerci con le vostre armi."
+"potere di ripulire l’area, ma dovete proteggerci dalle loro armi."
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:139
@@ -1413,12 +1411,12 @@ msgid ""
 "I please travel with you?"
 msgstr ""
 "Ho sempre desiderato incontrare gli elfi e adesso ho combattuto al loro "
-"fianco! Posso unirmi a voi?"
+"fianco! Posso viaggiare con voi?"
 
 #. [message]: id=Erlornas
 #: data/campaigns/An_Orcish_Incursion/scenarios/06_A_Detour_through_the_Swamp.cfg:162
 msgid "Certainly... I shall be glad of your help."
-msgstr "Certo... sarò felice di averti al mio fianco."
+msgstr "Certamente... sarò grato del tuo aiuto."
 
 #. [scenario]: id=07_Showdown
 #: data/campaigns/An_Orcish_Incursion/scenarios/07_Showdown.cfg:9
@@ -1455,7 +1453,7 @@ msgid ""
 "can muster a full invasion force."
 msgstr ""
 "Mio signore! Abbiamo cavalcato incessantemente per più di una settimana per "
-"raggiungerla! Il consiglio ha deliberato, e vi chiede di sconfiggere Rualsha "
+"raggiungervi! Il Ka’lian ha deliberato, e vi chiede di sconfiggere Rualsha "
 "in fretta prima che possa organizzare una completa forza d’invasione."
 
 #. [message]: speaker=Rualsha
@@ -1507,7 +1505,7 @@ msgid ""
 "upon its heels."
 msgstr ""
 "Ho paura che sarà proprio così. Oggi abbiamo ottenuto una prima vittoria, ma "
-"ci attendano tempi oscuri."
+"ci attendono tempi oscuri."
 
 #~ msgid "Time runs out"
 #~ msgstr "Fine dei turni a disposizione"
