--- a/po/wesnoth-units/it.po
+++ b/po/wesnoth-units/it.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2010-11-06 18:21+0100\n"
+"POT-Creation-Date: 2011-11-16 12:43+0100\n"
+"PO-Revision-Date: 2011-11-19 17:48+0100\n"
 "Last-Translator: Antonio Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -320,7 +320,7 @@ msgstr ""
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Rune_Lord.cfg:218
 #: data/core/units/dwarves/Runemaster.cfg:5
 msgid "Dwarvish Runemaster"
-msgstr "Nano signore delle rune"
+msgstr "Nano maestro delle rune"
 
 #. [unit_type]: id=Dwarvish Runemaster, race=dwarf
 #. [unit_type]: id=Dwarvish Rune Lord, race=dwarf
@@ -336,6 +336,12 @@ msgid ""
 "their runes cause the physical blows of their enemies to deal less damage "
 "than would be expected."
 msgstr ""
+"Eccezion fatta per coloro con capacità quasi soprannaturali, il grado più "
+"alto a cui un fabbro delle rune può ascendere è quello di Nano maestro delle "
+"rune. Menando colpi potenti quasi come quelli dei migliori guerrieri, "
+"sarebbero temibili senza le loro arti, ma con esse sono praticamente "
+"invincibili, in quanto le loro rune fanno sì che gli attacchi fisici dei "
+"loro nemici causino meno danno di quanto ci si potrebbe aspettare."
 
 #. [attack]: type=cold
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Rune_Lord.cfg:44
@@ -393,7 +399,7 @@ msgstr "zanne"
 #. [unit_type]: id=Dread Bat, race=bats
 #: data/core/units/bats/Bat_Dread.cfg:4
 msgid "Dread Bat"
-msgstr "Pipistrello della morte"
+msgstr "Pipistrello terrificante"
 
 #. [unit_type]: id=Dread Bat, race=bats
 #: data/core/units/bats/Bat_Dread.cfg:20
@@ -402,8 +408,8 @@ msgid ""
 "Bats, gaining the ability to drain not merely the blood but the very life "
 "energy of their victims."
 msgstr ""
-"I più cattivi e aggressivi dei pipistrelli sanguinari diventano pipistelli "
-"della morte e acquisiscono l'abilità di succhiare non solo il sangue ma "
+"I più cattivi e aggressivi dei pipistrelli sanguinari diventano pipistrelli "
+"terrificanti e acquisiscono l'abilità di succhiare non solo il sangue ma "
 "anche l'energia vitale delle loro vittime."
 
 #. [unit_type]: id=Vampire Bat, race=bats
@@ -869,7 +875,7 @@ msgstr ""
 #: data/core/units/dwarves/Arcanister.cfg:4
 #, fuzzy
 msgid "Dwarvish Arcanister"
-msgstr "Nano combattente"
+msgstr "Nano arcanista"
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:31
@@ -879,6 +885,11 @@ msgid ""
 "that is his intent. His skill in runecrafting is unrivaled, and the glyphs "
 "he carves into his weapons and armor deflect the blows of his enemies."
 msgstr ""
+"Il più potente tra tutti gli incisori di rune, il Nano arcanista distrugge i "
+"nemici feriti quasi istantaneamente, e raramente fallisce nel causare una "
+"ferita quando questo sia il suo intento. La sua capacità nell’arte delle "
+"rune è senza rivali, e i glifi che incide sulle sue armi e armature deviano "
+"i colpi dei suoi nemici."
 
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:4
@@ -978,7 +989,7 @@ msgstr ""
 #: data/core/units/dwarves/Runesmith.cfg:4
 #, fuzzy
 msgid "Dwarvish Runesmith"
-msgstr "Nano signore delle rune"
+msgstr "Nano fabbro delle rune"
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:29
@@ -988,6 +999,10 @@ msgid ""
 "and accuracy, and disrupt the blows of their enemies, causing them to strike "
 "softly, weakly and on the armor of the defender."
 msgstr ""
+"I Nani fabbri delle rune, ora pratici della loro arte, incidono rune arcane "
+"sulle loro armi e armature. Queste rune infondono gli attacchi dei fabbri "
+"con potenza e precisione, e disturbano i colpi dei loro nemici, facendo sì "
+"che colpiscano dolcemente, debolmente e sull'armatura del difensore."
 
 #. [unit_type]: id=Dwarvish Scout, race=dwarf
 #: data/core/units/dwarves/Scout.cfg:4
@@ -1425,7 +1440,7 @@ msgstr "Tiratrice scelta elfica"
 #. [unit_type]: id=Elvish Marshal, race=elf
 #: data/core/units/elves/Marshal.cfg:4
 msgid "Elvish Marshal"
-msgstr "Elfo colonnello"
+msgstr "Elfo maresciallo"
 
 #. [unit_type]: id=Elvish Marshal, race=elf
 #: data/core/units/elves/Marshal.cfg:27
@@ -3779,9 +3794,8 @@ msgstr "coda"
 
 #. [unit_type]: id=Fire Guardian, race=monster
 #: data/core/units/monsters/Fire_Guardian.cfg:4
-#, fuzzy
 msgid "Fire Guardian"
-msgstr "Drago di fuoco"
+msgstr "Guardiano di fuoco"
 
 #. [unit_type]: id=Fire Guardian, race=monster
 #: data/core/units/monsters/Fire_Guardian.cfg:28
@@ -3791,6 +3805,10 @@ msgid ""
 "their bidding. When not being controlled they like to frolic in pools of "
 "lava and take great delight in burning anything they can reach."
 msgstr ""
+"I guardiani di fuoco sono spiriti di fumo e fiamme. Nessuno sa esattamente "
+"da dove vengano, ma sono a volte evocati dai maghi più potenti. Quando non "
+"sono inviati in missione, amano rosolarsi in pozze di lava e provano un gran "
+"piacere nel bruciare tutto quello che incontrano."
 
 #. [attack]: type=fire
 #: data/core/units/monsters/Fire_Guardian.cfg:31
@@ -3993,17 +4011,13 @@ msgstr ""
 
 #. [unit_type]: id=Direwolf, race=wolf
 #: data/core/units/monsters/Wolf_Dire.cfg:4
-#, fuzzy
-#| msgid "Direwolf Rider"
 msgid "Direwolf"
-msgstr "Cavalcatore di lupi selvaggi"
+msgstr "Lupo selvaggio"
 
 #. [unit_type]: id=Great Wolf, race=wolf
 #: data/core/units/monsters/Wolf_Great.cfg:4
-#, fuzzy
-#| msgid "Great Troll"
 msgid "Great Wolf"
-msgstr "Grande troll"
+msgstr "Grande lupo"
 
 #. [unit_type]: id=Yeti, race=monster
 #: data/core/units/monsters/Yeti.cfg:4
@@ -4262,9 +4276,9 @@ msgid ""
 "or elven fighters, Grunts can deliver much more powerful blows, and take "
 "more hits before falling."
 msgstr ""
-"L’orco recluta è la base dell’esercito degli orchi. Anche se è più lento dei "
-"combattenti umani o elfici, l’orco può trasportare archi molto più potenti, "
-"e sopportare maggiori danni prima di morire."
+"L’orco recluta è la base dell’esercito degli orchi. Anche se sono più lente "
+"dei combattenti umani o elfici, le reclute possono vibrare colpi molto più "
+"potenti, e sopportare maggiori danni prima di morire."
 
 #. [unit_type]: id=Orcish Leader, race=orc
 #: data/core/units/orcs/Leader.cfg:4
@@ -4698,13 +4712,13 @@ msgstr ""
 "Descrivere un troll come un cucciolo è qualcosa che rasenta un ossimoro, "
 "considerando che i loro corpi sono molto più robusti di quelli di un uomo "
 "adulto. Sono goffi e non camminano ancora bene, e spesso si muovono a "
-"quattro zampe, ma le difficoltà che ciò comporta è controbilanciato dalla "
+"quattro zampe, ma le difficoltà che ciò comporta sono controbilanciate dalla "
 "forza bruta della loro razza."
 
 #. [unit_type]: id=Ghast, race=undead
 #: data/core/units/undead/Corpse_Ghast.cfg:4
 msgid "Ghast"
-msgstr ""
+msgstr "Orrore"
 
 #. [unit_type]: id=Ghast, race=undead
 #: data/core/units/undead/Corpse_Ghast.cfg:20
@@ -4716,6 +4730,13 @@ msgid ""
 "flesh straight from their foes. Once their enemy is defeated, they eat the "
 "rest of the body, gaining strength in the process."
 msgstr ""
+"L’orrore è una creatura prelevata dagli incubi primordiali del genere umano. "
+"A differenza dei loro cugini, divoratori di cadaveri e necrofagi, gli orrori "
+"non sono abbastanza pazienti per attendere che le loro vittime muoiano per "
+"effetto del veleno prima di consumarne il corpo. Essi attaccano direttamente "
+"con le loro enormi bocche, provando a strappare la carne dai loro nemici. "
+"Una volta che il loro nemico è sconfitto, essi mangiano il resto del corpo, "
+"guadagnando forza nel processo."
 
 #. [unit_type]: id=Ghoul, race=undead
 #: data/core/units/undead/Corpse_Ghoul.cfg:4
@@ -5140,7 +5161,7 @@ msgstr ""
 #. [unit_type]: id=Revenant, race=undead
 #: data/core/units/undead/Skele_Revenant.cfg:4
 msgid "Revenant"
-msgstr "Squartatore"
+msgstr "Revenente"
 
 #. [unit_type]: id=Revenant, race=undead
 #: data/core/units/undead/Skele_Revenant.cfg:19
@@ -5154,12 +5175,12 @@ msgid ""
 "fight to the bitter end."
 msgstr ""
 "Fornite di una falsa vita per combattere nuovamente, le creature chiamate "
-"Squartatori furono un tempo valorosi guerrieri, tuttavia i ricordi di quei "
+"Revenenti furono un tempo valorosi guerrieri, tuttavia i ricordi di quei "
 "tempi sono quasi del tutto dimenticati dalle loro anime non-morte. Anche gli "
 "stregoni che li riportano in vita possono solo speculare sul loro passato. "
-"Tralasciando queste domande, gli Squartatori sono potenti strumenti durante "
-"le battaglie: guerrieri senza paura che non sentono il dolore e che "
-"combatteranno sino alla fine."
+"Tralasciando queste domande, un Revenente è un potente strumento durante le "
+"battaglie: un guerriero senza paura che non sente il dolore e che combatterà "
+"sino alla fine."
 
 #. [unit_type]: id=Skeleton, race=undead
 #: data/core/units/undead/Skeleton.cfg:4
