--- a/po/wesnoth-manpages/it.po
+++ b/po/wesnoth-manpages/it.po
@@ -3,12 +3,12 @@
 # Copyright (C) 2006 Wesnoth development team.
 #
 # Automatically generated, 2006.
-# Luciano Montanaro <mikelima@cirulla.net>, 2007, 2008, 2009.
+# Luciano Montanaro <mikelima@cirulla.net>, 2007, 2008, 2009, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "POT-Creation-Date: 2011-08-27 10:13+0300\n"
-"PO-Revision-Date: 2010-02-14 15:49+0100\n"
+"PO-Revision-Date: 2011-02-06 12:52+0100\n"
 "Last-Translator: Luciano Montanaro <mikelima@cirulla.net>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -29,7 +29,7 @@ msgstr "WESNOTH"
 #: ../../doc/man/wesnoth.6:16 ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "2011"
-msgstr ""
+msgstr "2011"
 
 # type: TH
 #. type: TH
@@ -135,7 +135,7 @@ msgstr "imposta il numero di bit per pixel. Esempio: B<--bpp 32>"
 #: ../../doc/man/wesnoth.6:49
 #, no-wrap
 msgid "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
-msgstr ""
+msgstr "B<-c, --campaign[[E<lt>difficoltàE<gt>] E<lt>id_campagnaE<gt> [E<lt>id_scenarioE<gt>]]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:56
@@ -159,7 +159,6 @@ msgstr "B<--config-dir>I<\\ nome>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:63
-#, fuzzy
 msgid ""
 "sets the user configuration directory to I<name> under $HOME or \"My "
 "Documents\\eMy Games\" for windows.  You can also specify an absolute path "
@@ -167,7 +166,9 @@ msgid ""
 "Games\""
 msgstr ""
 "imposta la directory di configurazione dell'utente a I<nome> sotto $HOME o "
-"\"My Documents\\eMy Games\" per Windows."
+"\"My Documents\\eMy Games\" per Windows. Puoi anche specificare un percorso "
+"assoluto per la directory di configurazione al di fuori di $HOME o \"My "
+"Documents\\eMy Games\""
 
 # type: TP
 #. type: TP
@@ -186,12 +187,12 @@ msgstr "stampa il percorso della cartella di configurazione ed esce."
 #: ../../doc/man/wesnoth.6:66
 #, no-wrap
 msgid "B<--data-dir E<lt>directoryE<gt>>"
-msgstr ""
+msgstr "B<--data-dir E<lt>directoryE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:69
 msgid "overrides the data directory with the one specified"
-msgstr ""
+msgstr "sostituisce la directory dei dati con quella specificata"
 
 # type: TP
 #. type: TP
@@ -221,13 +222,12 @@ msgstr "B<-e,\\ --editor>I<\\ file>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:79
-#, fuzzy
 msgid ""
 "start the in-game map editor directly. If I<file> is specified, equivalent "
 "to B<-l --load>"
 msgstr ""
 "avvia il gioco direttamente dall'editor per le partite. Se I<file> è "
-"specificato, equivale a B<-e --load>"
+"specificato, equivale a B<-l --load>"
 
 # type: TP
 #. type: TP
@@ -348,9 +348,9 @@ msgstr ""
 # type: TP
 #. type: TP
 #: ../../doc/man/wesnoth.6:122
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--logdomains\\ [filter]>"
-msgstr "B<--logdomains>"
+msgstr "B<--logdomains\\ [filtro]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:127
@@ -479,7 +479,7 @@ msgstr "stampa il nome della cartella contenente i dati del gioco ed esce."
 #: ../../doc/man/wesnoth.6:158
 #, no-wrap
 msgid "B<--preprocess, -p[=E<lt>define1E<gt>,E<lt>define2E<gt>,...] E<lt>file/folderE<gt> E<lt>target directoryE<gt>>"
-msgstr ""
+msgstr "B<--preprocess, -p[=E<lt>define1E<gt>,E<lt>define2E<gt>,...] E<lt>file/cartellaE<gt> E<lt>directory destinazioneE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:172
@@ -500,7 +500,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:172
 #, no-wrap
 msgid "B<--preprocess-input-macros E<lt>source fileE<gt>>"
-msgstr ""
+msgstr "B<--preprocess-input-macros E<lt>file sorgenteE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:176
@@ -513,7 +513,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:176
 #, no-wrap
 msgid "B<--preprocess-output-macros [E<lt>target fileE<gt>]>"
-msgstr ""
+msgstr "B<--preprocess-output-macros [E<lt>file destinazioneE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:182
@@ -827,7 +827,7 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:273 ../../doc/man/wesnothd.6:265
 #, no-wrap
 msgid "EXIT STATUS"
-msgstr ""
+msgstr "STATO DI USCITA"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:276
@@ -886,10 +886,9 @@ msgstr "COPYRIGHT"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:290 ../../doc/man/wesnothd.6:280
-#, fuzzy
 msgid "Copyright \\(co 2003-2011 David White E<lt>davidnwhite@verizon.netE<gt>"
 msgstr ""
-"Copyright \\(co 2003-2009 David White E<lt>davidnwhite@verizon.netE<gt>"
+"Copyright \\(co 2003-2011 David White E<lt>davidnwhite@verizon.netE<gt>"
 
 # type: Plain text
 #. type: Plain text
@@ -914,9 +913,8 @@ msgstr "SEE ALSO"
 # type: TH
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:296
-#, fuzzy
 msgid "B<wesnothd>(6)."
-msgstr "wesnothd"
+msgstr "B<wesnothd>(6)."
 
 # type: TH
 #. type: TH
@@ -1779,9 +1777,8 @@ msgstr ""
 # type: TH
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:286
-#, fuzzy
 msgid "B<wesnoth>(6)."
-msgstr "wesnoth"
+msgstr "B<wesnoth>(6)."
 
 # type: TP
 #~ msgid "B<--smallgui>"
