--- a/po/wesnoth-utbs/it.po
+++ b/po/wesnoth-utbs/it.po
@@ -5,8 +5,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-01-30 01:31+0100\n"
+"POT-Creation-Date: 2011-11-16 12:43+0100\n"
+"PO-Revision-Date: 2011-11-13 13:29+0100\n"
 "Last-Translator: Luciano Montanaro <mikelima@cirulla.net>\n"
 "Language-Team: Italian <kde-i18n-it@kde.org>\n"
 "Language: it\n"
@@ -2717,13 +2717,12 @@ msgstr ""
 
 #. [message]: speaker=Ganthos
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2333
-#, fuzzy
 msgid ""
 "You got me, elf... But you won’t be so lucky with the tribes of the hills... "
 "(<i>Cough</i>)"
 msgstr ""
 "Mi hai sconfitto, elfo... Ma non sarai così fortunato con le tribù sulle "
-"colline..."
+"colline... (<i>coff</i>)"
 
 #. [message]: speaker=Ganthos
 #: data/campaigns/Under_the_Burning_Suns/scenarios/03_Stirring_in_the_Night.cfg:2337
@@ -3744,7 +3743,6 @@ msgstr ""
 
 #. [message]: speaker=Elyssa
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:618
-#, fuzzy
 msgid ""
 "No I haven’t, I don’t often explore underground unless I have to. There are "
 "lots of nasty things that lurk far away from the light of the suns. But I’ve "
@@ -3752,9 +3750,9 @@ msgid ""
 "dwarves."
 msgstr ""
 "No, non esploro spesso il sottosuolo se non sono costretta. Ci sono molte "
-"cose pericolose che si nascondono qui, bene al riparo dalla luce dei soli. "
-"Ma ho letto qualcosa su di loro, e ho anche conosciuto persone che hanno "
-"avuto contatti con i nani."
+"cose pericolose nascoste qui, ben al riparo dalla luce dei soli. Ma ho letto "
+"qualcosa su di loro, e ho anche conosciuto persone che hanno avuto contatti "
+"con i nani."
 
 #. [message]: speaker=Nym
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:623
@@ -3763,17 +3761,16 @@ msgstr "Come sono fatti, i nani?"
 
 #. [message]: speaker=Elyssa
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:628
-#, fuzzy
 msgid ""
 "They’re a proud people, and some would say greedy. They love their gold and "
 "fine metals, and forge many beautiful things. I should warn you, they have "
 "little liking for elves. There was some betrayal many years ago, though I "
 "don’t know what happened."
 msgstr ""
-"Sono un popolo orgoglioso e alcuni dicono che sono avidi. Amano il loro oro "
-"e i metalli preziosi, forgiano molti oggetti meravigliosi. Ti devo avvertire "
-"che amano poco gli elfi. Ci fu un tradimento molto tempo fa, anche se non so "
-"che cosa sia successo di preciso."
+"Sono un popolo orgoglioso, e qualcuno direbbe avido. Amano il loro oro e i "
+"metalli preziosi, forgiano molti oggetti meravigliosi. Ti devo avvertire che "
+"amano poco gli elfi. Ci fu un tradimento molto tempo fa, anche se non so che "
+"cosa sia successo."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:633
@@ -4480,24 +4477,18 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1719
-#, fuzzy
-#| msgid "Defeat Troll Leaders"
 msgid "Defeat troll leaders"
 msgstr "Sconfiggi i capi dei troll"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1735
-#, fuzzy
-#| msgid "Death of Zhul"
 msgid "Death of Fundin"
-msgstr "Morte di Zhul"
+msgstr "Morte di Fundin"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1739
-#, fuzzy
-#| msgid "Death of Nog"
 msgid "Death of Nori"
-msgstr "Morte di Nog"
+msgstr "Morte di Nori"
 
 #. [option]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1752
@@ -4515,24 +4506,18 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1784
-#, fuzzy
-#| msgid "Defeat Dwarf Leaders"
 msgid "Defeat dwarf leaders"
 msgstr "Sconfiggi i condottieri dei nani"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1800
-#, fuzzy
-#| msgid "Death of Zhul"
 msgid "Death of Thungar"
-msgstr "Morte di Zhul"
+msgstr "Morte di Thungar"
 
 #. [objective]: condition=lose
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1804
-#, fuzzy
-#| msgid "Death of Jarl"
 msgid "Death of Gnarl"
-msgstr "Morte di Jarl"
+msgstr "Morte di Gnarl"
 
 #. [message]: speaker=$explorer.id
 #: data/campaigns/Under_the_Burning_Suns/scenarios/05_A_Subterranean_Struggle.cfg:1826
