Updated the British English translation.

--- a/po/wesnoth-dm/en_GB.po
+++ b/po/wesnoth-dm/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-16 07:45-0500\n"
+"PO-Revision-Date: 2011-11-19 19:53-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -1695,7 +1695,7 @@ msgid ""
 "come."
 msgstr ""
 "Living...? I see that it is so. Your breath stirs dust that has lain "
-"untouched since the Primal Aeon. And it was foretold that one like you would "
+"untouched since the Primal Æon. And it was foretold that one like you would "
 "come."
 
 #. [message]: speaker=Delfador
@@ -1714,10 +1714,10 @@ msgid ""
 "the Mirror of Evanescent Time that a living man would come here to be "
 "tested. AND I AM THE TEST!"
 msgstr ""
-"Foretold in the Primal Aeon, years past beyond your counting. An-Usrukhar "
-"the Great, he of whom I am but the tiniest shade and fragment, foresaw in "
-"the Mirror of Evanescent Time that a living man would come here to be "
-"tested. AND I AM THE TEST!"
+"Foretold in the Primal Æon, years past beyond your counting. An-Usrukhar the "
+"Great, he of whom I am but the tiniest shade and fragment, foresaw in the "
+"Mirror of Evanescent Time that a living man would come here to be tested. "
+"AND I AM THE TEST!"
 
 #. [message]: speaker=Delfador
 #. "coil" is an archaism. In the English of around 1600, it was
