--- a/po/wesnoth-dm/gl.po
+++ b/po/wesnoth-dm/gl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-10-16 00:42+0200\n"
+"PO-Revision-Date: 2011-11-17 20:43+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -18,6 +18,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "X-Generator: Lokalize 1.2\n"
@@ -439,25 +440,15 @@ msgstr "Non! Medor… Non morras!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:130
-#, fuzzy
-#| msgid ""
-#| "Heed my last words, Delfador! Journey northeast to Weldyn, and seek out "
-#| "my friend Leollyn. He will help you."
 msgid ""
 "Heed my last words, Delfador! Journey northwest to Weldyn, and seek out my "
 "friend Leollyn. He will help you."
 msgstr ""
-"Escoita ben as miñas últimas palabras, Delfador! Viaxa en dirección nordeste "
+"Escoita ben as miñas últimas palabras, Delfador! Viaxa en dirección noroeste "
 "a Güedin, e busca alí ao meu amigo Leolin. El hate axudar."
 
 #. [message]: speaker=Methor
 #: data/campaigns/Delfadors_Memoirs/scenarios/02_This_Valley_Belongs_to_Me.cfg:143
-#, fuzzy
-#| msgid ""
-#| "Well done, Delfador! I see I have trained you well, and you are truly "
-#| "ready to seek your fortune. My traveling days are done, but it is time "
-#| "for you to journey northeast to Weldyn, and seek out my friend Leollyn. "
-#| "He will help you."
 msgid ""
 "Well done, Delfador! I see I have trained you well, and you are truly ready "
 "to seek your fortune. My traveling days are done, but it is time for you to "
@@ -466,7 +457,7 @@ msgid ""
 msgstr ""
 "Moi ben, Delfador! Vexo que te adestrei ben, e estás completamente preparado "
 "para buscar o teu propio destino. Os meus días de viaxe xa remataron, pero é "
-"hora de que te dirixas ao nordeste, a Güedin, e busques alí a ao meu amigo "
+"hora de que te dirixas ao noroeste, a Güedin, e busques alí a ao meu amigo "
 "Leolin. El hate axudar."
 
 #. [message]: id=Delfador
