--- a/po/wesnoth-ei/gl.po
+++ b/po/wesnoth-ei/gl.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-01 19:48+0100\n"
+"PO-Revision-Date: 2011-11-21 07:28+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -18,6 +18,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
+"com>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Lokalize 1.2\n"
 
@@ -801,7 +803,7 @@ msgstr "Derrota a calquera dos feiticeiros escuros."
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:155
 msgid "We have escaped from those dark tunnels! But where are we now?"
-msgstr "Ben, conseguimos escapar das covas. E agora onde estamos?"
+msgstr "Ben, conseguimos saír das covas. Agora, onde estamos?"
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:159
@@ -812,9 +814,9 @@ msgid ""
 "around them."
 msgstr ""
 "Estamos no medio das montañas orientais, nun paso de montaña que vai do "
-"leste ao oeste. Temos que ir ao norte para chegar onda Owaec, pero non "
-"podemos atravesar as montañas... debemos ir ao leste ou ao oeste, e confiar "
-"en que poidamos rodealas."
+"leste ao oeste. Temos que ir ao norte para chegar onda Ouen, pero non "
+"podemos atravesar as montañas… debemos dirixirnos ao leste ou ao oeste, e "
+"confiar en podermos rodealas."
 
 #. [message]: speaker=Mal-Kallat
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:163
@@ -823,34 +825,31 @@ msgstr "Ha ha ha! Rodeámosvos!"
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:167
-#, fuzzy
 msgid ""
 "Why don’t we see if the new recruit can handle them. After all, there are "
 "only two!"
 msgstr ""
-"Por que non vemos se os novo recruta pode con eles? Despois de todo, só son "
-"dous!"
+"Por que non deixamos que o novo recruta se encargue deles? A fin de contas, "
+"só son dous!"
 
 #. [message]: speaker=Mal-Tar
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:171
-#, fuzzy
 msgid "No!! They’ll kill me!"
-msgstr "Non!!! Vanme matar!"
+msgstr "Deixádevos de bromas, que como non me axudedes estou morto."
 
 #. [message]: speaker=Mal-Kallat
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:175
 msgid "That would be your problem, then."
-msgstr "Iso é o teu problema."
+msgstr "Iso é cousa túa."
 
 #. [message]: speaker=Gweddry
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:179
-#, fuzzy
 msgid ""
 "These undead are toying with us! This adept is weak — we may be able to take "
 "his castle."
 msgstr ""
-"Estes non mortos andan a xogar connosco! Este adepto é feble, pode que "
-"consigamos tomar o seu castelo."
+"Estes non mortos andan a xogar connosco. O adepto de aquí non parece moi "
+"forte, se cadra podemos facernos co seu castelo."
 
 #. [message]: speaker=Dacyn
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:183
@@ -864,7 +863,9 @@ msgstr ""
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:194
 msgid "No! You have defeated me, and can re-enter Wesnoth!"
-msgstr "Non! Derrotástesme, e agora poderedes regresar a Wesnoth!"
+msgstr ""
+"Non! Como puideron derrotarme? Como non fun capaz de cortarlles o camiño de "
+"volta a Wesnoth!"
 
 #. [message]: speaker=Mal-Skraat
 #: data/campaigns/Eastern_Invasion/scenarios/03_An_Unexpected_Appearance.cfg:215
@@ -885,15 +886,16 @@ msgid ""
 "foothills of the Estmarks in a direction few Wesnothians had traveled "
 "before, into unknown forest country just south of the Great River."
 msgstr ""
-"Pero Gweddry e Dacyn ían descubrir que volver a Wesnoth non ía ser doado "
-"agora que non podían usar o túnel de fuxida. Marcharon das lombas de Estmark "
-"por camiños polos que pouca xente de Wesnoth viaxara antes cara un bosque "
-"descoñecido xusto ao sur do Gran Río."
+"Pero Uedri e Dasin pronto descubrirían que volver a Wesnoth non ía ser tan "
+"doado agora que non podían facelo polas covas polas que fuxiran. Marcharon "
+"das lombas de Ismar por camiños polos que pouca xente de Wesnoth viaxara "
+"antes, e foron dar a un bosque descoñecido xusto ao sur do Gran Río."
 
 #. [side]: type=Lieutenant, id=Gweddry
 #. [side]: type=Elvish Ranger, id=Volas
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:34
 #: data/campaigns/Eastern_Invasion/scenarios/04a_An_Elven_Alliance.cfg:51
+#, fuzzy
 msgid "Allies"
 msgstr "Aliados"
 
